tests/ixml_not_003_abb.test
START
hello = '_', ![L], ~[], ~[].
INPUT
_aa
OUTPUT
ixml:1:2: syntax error
_aa
 ^
END
